# dehancer-opencl-helper

./: .gitignore  CMakeLists.txt  README.md
clHelper/: CMakeLists.txt  clHelper.cmake  common.h  context.cpp  device.cpp  device.h  embeddedProgram.cpp  embeddedProgram.h  platform.cpp
clHelper/dehancer/opencl/: device.h  embeddedProgram.h  platform.h
examples/aoBench/: BenchKernel.cpp  BenchKernel.h  CMakeLists.txt  Function.cpp  Function.h  Image.cpp  Image.h  aoBench.cl  aoBench.cpp  aoBench.h
examples/hello/: CMakeLists.txt  hello.cl  helloKernel.c  helloKernel.cl  helloKernel.cpp
examples/shaders/: aoBenchKernel.h  exampleKernel.cl
