PROJECT(dehancer-opencl-helper)
cmake_minimum_required(VERSION 2.6)

if (NOT CMAKE_INSTALL_LIBDIR)
    set(CMAKE_INSTALL_LIBDIR lib)
endif ()

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
if(PRINT_DEBUG)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPRINT_DEBUG=1")
endif()
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG_BUILD=1")

set(CMAKE_MACOSX_RPATH TRUE)
SET(clHelper_DIR ${CMAKE_CURRENT_SOURCE_DIR}/clHelper)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
ADD_SUBDIRECTORY(${clHelper_DIR} clHelper_dir)

ADD_SUBDIRECTORY(examples)
