cmake_minimum_required(VERSION 3.12)

#
# Project
#
set (PROJECT_LIB dehancer_opencl_helper)
set (DEHANCER_OPENCL_VERSION 1)
option(BUILD_TESTING OFF)

project(${PROJECT_LIB} VERSION 0.0.1)

if (NOT CMAKE_INSTALL_LIBDIR)
    set(CMAKE_INSTALL_LIBDIR lib)
endif ()

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")

if(PRINT_DEBUG)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPRINT_DEBUG=1")
endif()

set(CMAKE_MACOSX_RPATH TRUE)
SET(clHelper_DIR ${CMAKE_CURRENT_SOURCE_DIR}/clHelper)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
ADD_SUBDIRECTORY(${clHelper_DIR} clHelper_dir)

if (BUILD_TESTING)
    ADD_SUBDIRECTORY(examples)
endif ()
